# Cache-Aware-Containers

./: BENCHMARKING.md  BENCHMARKING_IMPLEMENTATION.md  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  README.md  access_patterns.cpp  alignment.cpp  aos_baseline.cpp  aos_vs_soa.cpp  bench_main.cpp  benchmark.hpp  growth_policy.cpp  prefetching.cpp
examples/: CMakeLists.txt
include/cac/: allocator.hpp  aos_container.hpp  cache_vector.hpp  iterator.hpp  particle.hpp  proxy.hpp  soa_container.hpp
tests/: CMakeLists.txt  test_aos.cpp  test_cache_vector.cpp  test_growth_policy.cpp  test_main.cpp  test_soa.cpp
